--- a/admin/view/javascript/d_visualize/gulp/package.json
+++ b/admin/view/javascript/d_visualize/gulp/package.json
@@ -14,7 +14,10 @@
     "gulp-autoprefixer": "^5.0.0",
     "gulp-sass": "^4.0.1",
     "gulp-sourcemaps": "^2.6.4",
-    "gulp-strip-css-comments": "^2.0.0"
+    "postcss": "6.0.23",
+    "gulp-strip-css-comments": "^2.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/preset-env": "^7.0.0"
   },
   "dependencies": {
     "del": "^3.0.0"
