--- a/admin/view/javascript/d_visualize/gulp/package.json
+++ b/admin/view/javascript/d_visualize/gulp/package.json
@@ -21,6 +21,18 @@
     "autoprefixer": "^6.5.4"
   },
   "dependencies": {
-    "del": "^3.0.0"
+    "del": "^3.0.0",
+    "gulp-babel": "^8.0.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-postcss": "^8.0.0",
+    "gulp-rename": "^1.4.0",
+    "gulp-uglify": "^3.0.1",
+    "lost": "^8.3.0",
+    "postcss-font-magician": "^2.2.1",
+    "postcss-import": "^12.0.0",
+    "postcss-pxtorem": "^4.0.1",
+    "postcss-scss": "^2.0.0",
+    "precss": "^3.1.2",
+    "pump": "^3.0.0"
   }
 }
