--- a/catalog/view/javascript/d_visualize/gulp_new/package.json
+++ b/catalog/view/javascript/d_visualize/gulp_new/package.json
@@ -19,12 +19,16 @@
     "gulp-uglify": "^3.0.0"
   },
   "dependencies": {
+    "@babel/core": "^7.1.0",
+    "@babel/preset-env": "^7.1.0",
+    "gulp-babel": "^8.0.0",
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^1.4.0",
     "postcss-font-magician": "^2.2.1",
     "postcss-import": "^12.0.0",
     "postcss-pxtorem": "^4.0.1",
     "postcss-scss": "^2.0.0",
-    "precss": "^3.1.2"
+    "precss": "^3.1.2",
+    "pump": "^3.0.0"
   }
 }
