--- a/admin/view/javascript/d_visualize/webpack/package.json
+++ b/admin/view/javascript/d_visualize/webpack/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "vue": "^2.5.2",
+    "vue-progressbar": "^0.7.5",
     "vue-router": "^3.0.1",
+    "vue-top-progress": "^0.7.0",
     "vuex": "^3.0.1",
     "vuex-router-sync": "^5.0.0"
   },
