--- a/admin/view/javascript/d_visualize/nuxt_vurify/package.json
+++ b/admin/view/javascript/d_visualize/nuxt_vurify/package.json
@@ -11,13 +11,15 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "cross-env": "^5.2.0",
-    "nuxt": "^2.0.0",
-    "vuetify": "^1.2.4",
     "@nuxtjs/axios": "^5.0.0",
+    "cross-env": "^5.2.0",
     "dotenv": "^5.0.1",
+    "node-sass": "^4.9.3",
+    "nuxt": "^2.0.0",
+    "sass-loader": "^7.1.0",
     "url-parse": "^1.4.3",
-    "vue-i18n": "^7.6.0"
+    "vue-i18n": "^7.6.0",
+    "vuetify": "^1.2.4"
   },
   "devDependencies": {
     "nodemon": "^1.11.0",
