--- a/admin/view/javascript/d_visualize/nuxt_vurify/package.json
+++ b/admin/view/javascript/d_visualize/nuxt_vurify/package.json
@@ -14,6 +14,7 @@
     "@nuxtjs/axios": "^5.0.0",
     "cross-env": "^5.2.0",
     "dotenv": "^5.0.1",
+    "moment": "^2.22.2",
     "node-sass": "^4.9.3",
     "nuxt": "^2.0.0",
     "sass-loader": "^7.1.0",
