--- a/admin/view/javascript/d_visualize/nuxt_vurify/package.json
+++ b/admin/view/javascript/d_visualize/nuxt_vurify/package.json
@@ -25,9 +25,10 @@
     "nuxt-fontawesome": "^0.3.0",
     "sass-loader": "^7.1.0",
     "url-parse": "^1.4.3",
+    "vue-color": "^2.7.0",
     "vue-i18n": "^7.6.0",
     "vue-truncate-filter": "^1.1.7",
-    "vuetify": "^1.2.4"
+    "vuetify": "^1.3.3"
   },
   "devDependencies": {
     "nodemon": "^1.11.0",
