--- a/admin/view/javascript/d_visualize/nuxt_vurify/package.json
+++ b/admin/view/javascript/d_visualize/nuxt_vurify/package.json
@@ -25,6 +25,7 @@
     "nuxt-fontawesome": "^0.3.0",
     "sass-loader": "^7.1.0",
     "url-parse": "^1.4.3",
+    "vue-codemirror": "^4.0.5",
     "vue-color": "^2.7.0",
     "vue-i18n": "^7.6.0",
     "vue-truncate-filter": "^1.1.7",
