--- a/catalog/view/theme/d_visualize/stylesheet/template/default/skin/opencart/config.json
+++ b/catalog/view/theme/d_visualize/stylesheet/template/default/skin/opencart/config.json
@@ -17,7 +17,7 @@
     "size-base": "14px",
     "family": "Open Sans",
     "line-height": "1.3",
-    "headings-family": "Montserrat",
+    "headings-family": "Open Sans",
     "headings-size-base": "14px",
     "headings-line-height": "1.1",
     "headings-letter-spacing": "1px",
