--- a/catalog/view/javascript/d_visualize/gulp_new/package.json
+++ b/catalog/view/javascript/d_visualize/gulp_new/package.json
@@ -22,6 +22,7 @@
     "@babel/core": "^7.1.0",
     "@babel/preset-env": "^7.1.0",
     "gulp-babel": "^8.0.0",
+    "gulp-json-to-sass": "0.0.4",
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^1.4.0",
     "postcss-font-magician": "^2.2.1",
