--- a/admin/view/javascript/d_visualize/nuxt_vurify/.env
+++ b/admin/view/javascript/d_visualize/nuxt_vurify/.env
@@ -1,4 +1,5 @@
 DEV=true
-USER_TOKEN=ebfd4e7333ca0c31369e4fe40dd2b592
+USER_TOKEN=80KnE1IFV8FF88cIh4pGAI7bGyRKocMl
 APP_NAME=Visualize
-DEV_SERVER=http://localhost/201/d_visualize/admin/
+DEV_SERVER=http://localhost/302/d_visualize/admin/
+SHOPUNITY_SERVER=https://api.shopunity.net/
