perform build on prod

--- a/admin/view/javascript/d_visualize/.env
+++ b/admin/view/javascript/d_visualize/.env
@@ -1,4 +1,4 @@
-DEV=true
+DEV=false
 USER_TOKEN=AlAuAoqomMr3ufO9e1Fg2RHIKPJ63U89
 APP_NAME=Visualize
 DEV_SERVER=http://localhost/302/d_visualize/admin/
