--- a/admin/view/javascript/d_visualize/.env
+++ b/admin/view/javascript/d_visualize/.env
@@ -1,5 +1,5 @@
-DEV=false
-USER_TOKEN=AlAuAoqomMr3ufO9e1Fg2RHIKPJ63U89
+DEV=true
+USER_TOKEN=16f88073a5953d518c2fa1d5d57b8918
 APP_NAME=Visualize
-DEV_SERVER=http://localhost/302/d_visualize/admin/
+DEV_SERVER=http://localhost/201/d_visualize/admin/
 SHOPUNITY_SERVER=https://api.shopunity.net/
