--- a/catalog/view/javascript/d_visualize/gulp_new/package.json
+++ b/catalog/view/javascript/d_visualize/gulp_new/package.json
@@ -25,6 +25,7 @@
     "gulp-json-to-sass": "0.0.4",
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^1.4.0",
+    "gulp-util": "^3.0.8",
     "postcss-font-magician": "^2.2.1",
     "postcss-import": "^12.0.0",
     "postcss-pxtorem": "^4.0.1",
