--- a/admin/view/javascript/d_visualize/.env
+++ b/admin/view/javascript/d_visualize/.env
@@ -1,4 +1,4 @@
-DEV=true
+DEV=false
 USER_TOKEN=5kN0eceS7qV5HL0M7jhPcOkIlG65FtmY
 APP_NAME=Visualize
 DEV_SERVER=http://localhost/302/d_visualize/admin/
