--- a/admin/view/javascript/d_visualize/package.json
+++ b/admin/view/javascript/d_visualize/package.json
@@ -14,7 +14,6 @@
     "@nuxtjs/axios": "^5.3.4",
     "cross-env": "^5.2.0",
     "dotenv": "^5.0.1",
-    "moment": "^2.22.2",
     "node-sass": "^4.10.0",
     "nuxt": "^2.2.0",
     "nuxt-fontawesome": "^0.3.0",
@@ -27,11 +26,14 @@
     "vuetify": "^1.3.5"
   },
   "devDependencies": {
+    "@nuxtjs/moment": "^1.1.0",
+    "moment": "^2.23.0",
     "nodemon": "^1.18.6",
     "postcss-custom-properties": "^8.0.9",
     "postcss-pxtorem": "^4.0.1",
     "precss": "^3.1.2",
     "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.2"
+    "stylus-loader": "^3.0.2",
+    "vuetify-loader": "^1.0.8"
   }
 }
