--- a/catalog/view/theme/d_visualize/stylesheet/template/default/skin/opencart/config.json
+++ b/catalog/view/theme/d_visualize/stylesheet/template/default/skin/opencart/config.json
@@ -4,6 +4,8 @@
     "primary": "#229ac8",
     "header-top-text": "#888",
     "header-top": "#eeeeee",
+    "footer": "#303030",
+    "footer-text": "#e2e2e2",
     "text-body": "#666",
     "heading": "#444",
     "link": "#23a1d1"
